# jipipe-python

./: README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  jipipe.rst
docs/_build/doctrees/: environment.pickle  index.doctree  jipipe.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  jipipe.html  modules.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/jipipe/: data_slot.html  filesystem.html  imagej.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/python-1.80.0/: index.html  jipipe.html  objects.inv
docs/_build/python-1.80.0/_modules/jipipe/: data_slot.html  filesystem.html  imagej.html
docs/_build/python-current/: genindex.html  modules.html
docs/_build/python-current/_sources/: modules.rst.txt
